--- a/ap/src/main/resources/CSS/Css.css
+++ b/ap/src/main/resources/CSS/Css.css
@@ -7,12 +7,9 @@
     -fx-background-size: cover;
 }
 
-#graveyard .viewport  {
-    -fx-background-color:transparent;
-    -fx-background-image: url("OtherPic/graveyardBackground.jpg");
-    -fx-background-repeat: stretch;
-    -fx-background-position: center center;
-    -fx-background-size: cover;
+#graveyard  {
+    -fx-border-color:crimson;
+    -fx-background-color: red;
 }
 
 .red {
