--- a/ap/src/main/resources/View/graphic/fxml/Shop.fxml
+++ b/ap/src/main/resources/View/graphic/fxml/Shop.fxml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Shop">
+<AnchorPane id="shopBackGround" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Shop">
    <children>
-      <Button layoutX="249.0" layoutY="222.0" mnemonicParsing="false" onMouseClicked="#getCardName" text="Button" />
-      <TextField fx:id="cardName" layoutX="208.0" layoutY="188.0" promptText="cardName" />
-      <HBox fx:id="cardPic" layoutX="183.0" layoutY="8.0" prefHeight="165.0" prefWidth="200.0" />
+      <Button layoutX="373.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#getCardName" text="search!" />
+      <TextField fx:id="cardName" layoutX="326.0" layoutY="321.0" promptText="cardName" />
+      <HBox fx:id="cardPic" layoutX="300.0" layoutY="14.0" prefHeight="165.0" prefWidth="200.0" />
+      <Button id="myButton" fx:id="backButton" mnemonicParsing="false" onMouseClicked="#getBack" stylesheets="@../../../CSS/Css.css">
+         <graphic>
+            <ImageView fitHeight="41.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Pictures/backArrow.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
