--- a/ap/src/main/resources/View/graphic/fxml/Shop.fxml
+++ b/ap/src/main/resources/View/graphic/fxml/Shop.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane id="shopBackGround" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Shop">
    <children>
-      <Button layoutX="310.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#getCardName" text="search!" />
-      <TextField fx:id="cardName" layoutX="308.0" layoutY="328.0" prefHeight="25.0" prefWidth="185.0" promptText="cardName" />
-      <HBox fx:id="cardPic" layoutX="300.0" layoutY="14.0" prefHeight="165.0" prefWidth="200.0" />
+      <Button layoutX="133.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#getCardName" text="search!" />
+      <TextField fx:id="cardName" layoutX="133.0" layoutY="343.0" prefHeight="25.0" prefWidth="214.0" promptText="cardName" />
+      <HBox fx:id="cardPic" layoutX="134.0" layoutY="28.0" prefHeight="165.0" prefWidth="200.0" />
       <Button id="myButton" fx:id="backButton" mnemonicParsing="false" onMouseClicked="#getBack" stylesheets="@../../../CSS/Css.css">
          <graphic>
             <ImageView fitHeight="41.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
@@ -18,8 +18,13 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="438.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#clearChoice" prefHeight="25.0" prefWidth="54.0" text="clear!" />
-      <Button layoutX="374.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#buyCard" prefHeight="25.0" prefWidth="54.0" text="buy!" />
-      <Label fx:id="messageBox" layoutX="312.0" layoutY="406.0" prefHeight="32.0" prefWidth="179.0" />
+      <Button layoutX="293.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#clearChoice" prefHeight="25.0" prefWidth="54.0" text="clear!" />
+      <Button layoutX="213.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#buyCard" prefHeight="25.0" prefWidth="54.0" text="buy!" />
+      <Label fx:id="messageBox" layoutX="131.0" layoutY="403.0" prefHeight="45.0" prefWidth="214.0" />
+      <ScrollPane fx:id="cardsScrolling" layoutX="465.0" layoutY="111.0" prefHeight="200.0" prefWidth="200.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
