Shop done mostly

--- a/ap/src/main/resources/View/graphic/fxml/Shop.fxml
+++ b/ap/src/main/resources/View/graphic/fxml/Shop.fxml
@@ -21,10 +21,6 @@
       <Button layoutX="293.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#clearChoice" prefHeight="25.0" prefWidth="54.0" text="clear!" />
       <Button layoutX="213.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#buyCard" prefHeight="25.0" prefWidth="54.0" text="buy!" />
       <Label fx:id="messageBox" layoutX="131.0" layoutY="403.0" prefHeight="45.0" prefWidth="214.0" />
-      <ScrollPane fx:id="cardsScrolling" layoutX="465.0" layoutY="111.0" prefHeight="200.0" prefWidth="200.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+      <ScrollPane fx:id="cardsScrolling" layoutX="461.0" layoutY="28.0" prefHeight="303.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
