--- a/ap/src/main/resources/View/graphic/fxml/Deck.fxml
+++ b/ap/src/main/resources/View/graphic/fxml/Deck.fxml
@@ -4,29 +4,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Deck">
+<AnchorPane id="shopBackGround" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Deck">
    <children>
-      <ScrollPane layoutX="138.0" layoutY="61.0" prefHeight="158.0" prefWidth="223.0" />
-      <ScrollPane layoutX="138.0" layoutY="287.0" prefHeight="158.0" prefWidth="223.0" />
-      <Label layoutX="407.0" layoutY="61.0" prefHeight="41.0" prefWidth="106.0" text="Active Deck:" textFill="#3bc942">
+      <ScrollPane fx:id="deckBar" layoutX="284.0" layoutY="179.0" prefHeight="158.0" prefWidth="223.0" />
+      <Label layoutX="342.0" layoutY="14.0" prefHeight="41.0" prefWidth="106.0" text="Active Deck:" textFill="#3bc942">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="407.0" layoutY="102.0" prefHeight="29.0" prefWidth="106.0">
+      <Label layoutX="303.0" layoutY="67.0" prefHeight="29.0" prefWidth="106.0">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="138.0" layoutY="25.0" text="All Decks:">
+      <Label layoutX="356.0" layoutY="131.0" prefHeight="29.0" prefWidth="79.0" text="All Decks:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="138.0" layoutY="247.0" text="All Cards:">
+      <Label layoutX="289.0" layoutY="370.0" prefHeight="41.0" prefWidth="196.0" text="Create or Remove Deck:" textFill="#c6d00f">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <Button fx:id="deckCreateButton" layoutX="289.0" layoutY="462.0" mnemonicParsing="false" onMouseClicked="#createDeck" prefHeight="25.0" prefWidth="63.0" text="Create!" />
+      <Button fx:id="deckRemoveButton" layoutX="422.0" layoutY="462.0" mnemonicParsing="false" onMouseClicked="#removeDeck" text="Remove!" />
+      <Label fx:id="result" layoutX="290.0" layoutY="508.0" prefHeight="41.0" prefWidth="196.0" />
+      <TextField fx:id="deckNameTextField" layoutX="288.0" layoutY="411.0" prefHeight="25.0" prefWidth="196.0" />
    </children>
 </AnchorPane>
