--- a/src/main/resources/View/graphic/fxml/Shop.fxml
+++ b/src/main/resources/View/graphic/fxml/Shop.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="shopBackGround" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Shop">
+<AnchorPane id="shopBackGround" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Menu.Shop">
    <children>
       <Button layoutX="133.0" layoutY="378.0" mnemonicParsing="false" onMouseClicked="#getCardName" text="search!" />
       <TextField fx:id="cardName" layoutX="133.0" layoutY="343.0" prefHeight="25.0" prefWidth="214.0" promptText="cardName" />
