--- a/src/main/resources/View/graphic/fxml/Deck.fxml
+++ b/src/main/resources/View/graphic/fxml/Deck.fxml
@@ -4,7 +4,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="shopBackGround" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.graphic.Deck">
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<AnchorPane id="shopBackGround" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Menu.Deck">
    <children>
       <ScrollPane fx:id="deckBar" layoutX="224.0" layoutY="169.0" prefHeight="174.0" prefWidth="338.0" />
       <Label layoutX="342.0" layoutY="14.0" prefHeight="41.0" prefWidth="106.0" text="Active Deck:" textFill="#3bc942">
@@ -32,5 +34,14 @@
       <Label fx:id="result" layoutX="290.0" layoutY="508.0" prefHeight="41.0" prefWidth="196.0" />
       <TextField fx:id="deckNameTextField" layoutX="288.0" layoutY="411.0" prefHeight="25.0" prefWidth="223.0" />
       <Button layoutX="361.0" layoutY="462.0" mnemonicParsing="false" onMouseClicked="#setAsActiveDeck" prefHeight="25.0" prefWidth="73.0" text="Activate!" />
+      <Button id="myButton" fx:id="backButton" mnemonicParsing="false" onMouseClicked="#getBack" stylesheets="@../../../CSS/Css.css">
+         <graphic>
+            <ImageView fitHeight="41.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Pictures/backArrow.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
