--- a/src/main/resources/CSS/Css.css
+++ b/src/main/resources/CSS/Css.css
@@ -14,6 +14,9 @@
     -fx-background-size: cover;
 }
 
+#Scissor{
+    -fx-background-image: url("../Pictures/Scissor")
+}
 
 #graveyard > .viewport {
     -fx-background-color: #d06720;
