--- a/src/main/resources/View/graphic/fxml/CardCreating.fxml
+++ b/src/main/resources/View/graphic/fxml/CardCreating.fxml
@@ -7,33 +7,34 @@
 
 <AnchorPane id="shopBackGround" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Menu.CardCreating">
    <children>
-      <TextField layoutX="326.0" layoutY="334.0" />
+      <TextField fx:id="nameBox" layoutX="326.0" layoutY="325.0" />
       <Label layoutX="326.0" layoutY="300.0" prefHeight="25.0" prefWidth="74.0" text="Name:" textFill="#ff3f48">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="326.0" layoutY="375.0" text="Attack:" textFill="#ff4242">
+      <Label layoutX="325.0" layoutY="356.0" text="Attack:" textFill="#ff4242">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="326.0" layoutY="408.0" />
-      <Label layoutX="326.0" layoutY="444.0" text="Defense:" textFill="#ff4343">
+      <TextField fx:id="attackBox" layoutX="325.0" layoutY="381.0" />
+      <Label layoutX="331.0" layoutY="414.0" text="Defense:" textFill="#ff4343">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="326.0" layoutY="476.0" />
-      <Label layoutX="326.0" layoutY="513.0" prefHeight="33.0" prefWidth="164.0" text="Clone effect from:" textFill="#ff2f2f">
+      <TextField fx:id="defenseBox" layoutX="325.0" layoutY="439.0" />
+      <Label layoutX="326.0" layoutY="471.0" prefHeight="33.0" prefWidth="164.0" text="Clone effect from:" textFill="#ff2f2f">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="326.0" layoutY="546.0" />
+      <TextField fx:id="cloneBox" layoutX="327.0" layoutY="504.0" />
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="291.0" layoutY="63.0" pickOnBounds="true" preserveRatio="true" />
       <TextField fx:id="imageURL" layoutX="326.0" layoutY="268.0" />
       <Button layoutX="325.0" layoutY="232.0" mnemonicParsing="false" onMouseClicked="#choosePicture" prefHeight="25.0" prefWidth="149.0" text="Choose picture" />
       <ImageView fx:id="choosenPicture" fitHeight="190.0" fitWidth="200.0" layoutX="301.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="326.0" layoutY="547.0" mnemonicParsing="false" onMouseClicked="#submit" prefHeight="25.0" prefWidth="149.0" text="submit" />
    </children>
 </AnchorPane>
