--- a/src/main/resources/View/graphic/fxml/CardCreating.fxml
+++ b/src/main/resources/View/graphic/fxml/CardCreating.fxml
@@ -36,5 +36,17 @@
       <Button layoutX="325.0" layoutY="232.0" mnemonicParsing="false" onMouseClicked="#choosePicture" prefHeight="25.0" prefWidth="149.0" text="Choose picture" />
       <ImageView fx:id="choosenPicture" fitHeight="190.0" fitWidth="200.0" layoutX="301.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="326.0" layoutY="547.0" mnemonicParsing="false" onMouseClicked="#submit" prefHeight="25.0" prefWidth="149.0" text="submit" />
+      <TextArea fx:id="descriptionBox" layoutX="522.0" layoutY="371.0" prefHeight="200.0" prefWidth="200.0" />
+      <Label layoutX="522.0" layoutY="329.0" prefHeight="41.0" prefWidth="173.0" text="description:" textFill="#ff4444">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="522.0" layoutY="232.0" text="Level:" textFill="#ff2323">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <TextField fx:id="levelBox" layoutX="522.0" layoutY="268.0" />
    </children>
 </AnchorPane>
