--- a/src/main/resources/View/graphic/fxml/importAndExportMenu.fxml
+++ b/src/main/resources/View/graphic/fxml/importAndExportMenu.fxml
@@ -9,7 +9,7 @@
       <Button layoutX="174.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#chooseCardJson" prefHeight="25.0" prefWidth="265.0" text="import" />
       <HBox fx:id="importedCard" layoutX="207.0" layoutY="27.0" prefHeight="225.0" prefWidth="200.0" />
       <TextField fx:id="cardToExport" layoutX="290.0" layoutY="355.0" />
-      <Button layoutX="174.0" layoutY="413.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="265.0" text="export" />
+      <Button layoutX="174.0" layoutY="413.0" mnemonicParsing="false" onMouseClicked="#exportCard" prefHeight="25.0" prefWidth="265.0" text="export" />
       <Label layoutX="107.0" layoutY="355.0" text="Card name to export:" textFill="#ff3030">
          <font>
             <Font name="System Bold" size="16.0" />
