--- a/src/main/resources/View/graphic/fxml/importAndExportMenu.fxml
+++ b/src/main/resources/View/graphic/fxml/importAndExportMenu.fxml
@@ -20,5 +20,10 @@
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
+      <Label fx:id="result" layoutX="276.0" layoutY="503.0" prefHeight="56.0" prefWidth="249.0" textFill="#e5ff00">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
