--- a/src/main/resources/View/graphic/fxml/Lobby.fxml
+++ b/src/main/resources/View/graphic/fxml/Lobby.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane id="shopBackGround" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../CSS/Css.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.Menu.Lobby">
    <children>
       <Button fx:id="threeRoundButton" layoutX="417.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#sendDataForThreeRounds" prefHeight="57.0" prefWidth="188.0" text="Three rounds">
@@ -20,6 +22,15 @@
          <font>
             <Font size="18.0" />
          </font>
+      </Button>
+      <Button id="myButton" fx:id="backButton" mnemonicParsing="false" onMouseClicked="#getBack" stylesheets="@../../../CSS/Css.css">
+         <graphic>
+            <ImageView fitHeight="41.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Pictures/backArrow.png" />
+               </image>
+            </ImageView>
+         </graphic>
       </Button>
    </children>
 </AnchorPane>
